<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stufacjoint.LoginAktivnos" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

   <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ime"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="32dp"
      android:ems="10" >

      <requestFocus />
      </EditText>
      </LinearLayout>
<LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true" >   

   <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      
      
      android:text="@string/lozinka"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editText2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textPassword" />
   
   </LinearLayout>
<LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true" >   


   <Button
      android:id="@+id/logingumb"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="login"
      android:text="@string/Login" />
   </LinearLayout>
   
   <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/linearLayout4"
        android:layout_centerHorizontal="true" > 
   
   <ImageButton 
       
        android:id="@+id/facebookgumb"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="@string/poruka"
      android:src="@drawable/prijavafb"
       />
   </LinearLayout>
   
   <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/linearLayout5"
        android:layout_centerHorizontal="true" > 
        
        <TextView 
       android:id="@+id/loginopis"
       android:layout_width="wrap_content"
      android:layout_height="wrap_content"
       android:text="@string/loginopis"
      />
        
       </LinearLayout>
   
  

   <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true" >   
   
   <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/attempts"
      android:textAppearance="?android:attr/textAppearanceMedium" />
 <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="TextView" />
  
   </LinearLayout>
</RelativeLayout>
